--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -29,6 +29,7 @@
 html {
   scroll-behavior: smooth;
   scroll-padding-top: 100px;
+  overflow-y: scroll;
 }
 
 body {
@@ -55,6 +56,7 @@ body {
   background: rgba(0, 0, 0, 0.5);
   backdrop-filter: saturate(180%) blur(20px);
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  view-transition-name: navbar;
 }
 
 .nav-container {
